dts/testData/inspections/nodeName/Invalid.dtsi
<error descr="Bad character \"#\" in node name">nam#e</error> {};

name {};